syntax = "proto3";
package common.v1;
option go_package = "api/common/v1;commonv1";

import "google/protobuf/any.proto";
import "common/v1/metadata.proto";
import "common/v1/error.proto";
import "common/v1/pagination.proto";
import "common/v1/warning.proto";

message BaseResponse {
  bool success = 1;
  google.protobuf.Any data = 2;   
  Metadata metadata = 3;         
  Error error = 4;               
  Pagination pagination = 5;     
  repeated Warning warnings = 6; 
  map<string, string> details = 7; 
}
